--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,13 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Docker
+.docker/*
+!.docker/entrypoint.sh
+!.docker/postgres/Dockerfile
+
+.env
+.env.development
+.env.test
+tsconfig.tsbuildinfo
